deployments/deploy/openim-admin-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-api-server
  template:
    metadata:
      labels:
        app: admin-api-server
    spec:
      containers:
        - name: openim-admin-api-container
          image: openim-admin-api:test
          volumeMounts:
            - name: openim-chat-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10009
      volumes:
        - name: openim-chat-config
          configMap:
            name: openim-chat-config
