deployments/deploy/openim-chat-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-api-server
  template:
    metadata:
      labels:
        app: chat-api-server
    spec:
      containers:
        - name: openim-chat-api-container
          image: openim/openim-chat-api:v3.8.3
          volumeMounts:
            - name: openim-chat-config
              mountPath: "/config"
              readOnly: true
          ports:
            - containerPort: 10008
      volumes:
        - name: openim-chat-config
          configMap:
            name: openim-chat-config
