deployments/deploy/openim-chat-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-api-service
spec:
  selector:
    app: chat-api-server
  ports:
    - name: http-10008
      protocol: TCP
      port: 10008
      targetPort: 10008
  type: NodePort
