deployments/deploy/openim-chat-rpc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-rpc-service
spec:
  selector:
    app: chat-rpc-server
  ports:
    - name: rpc-30300
      protocol: TCP
      port: 30300
      targetPort: 30300
  type: ClusterIP
