deployments/deploy/http-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: openim-api.localtest.me
      http:
        paths:
          - path: /chat/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-api-service
                port:
                  number: 10008
    - host: openim-api.localtest.me
      http:
        paths:
          - path: /chat_admin/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-api-service
                port:
                  number: 10009
