deployments/deploy/https-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - openim-api.localtest.me
      secretName: openim-api-tls
  rules:
    - host: openim-api.localtest.me
      http:
        paths:
          - path: /chat/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-api-service
                port:
                  number: 10008
    - host: openim-api.localtest.me
      http:
        paths:
          - path: /chat_admin/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-api-service
                port:
                  number: 10009
